--- a/frontend/src/components/styles/Journal.css
+++ b/frontend/src/components/styles/Journal.css
@@ -1,4 +1,20 @@
-.journalbg{
+.journalbg1{
+    background-image: url('Journalsbg.jpg');
+    height: auto;
+    min-height: 100vh;
+    max-width: 100vw;
+    background-size: 100vw 
+}
+
+.journalbg2{
+    background-image: url('Journalsbg.jpg');
+    height: auto;
+    min-height: 100vh;
+    max-width: 100vw;
+    background-size: 100vw 
+}
+
+.journalbg3{
     background-image: url('Journalsbg.jpg');
     height: auto;
     min-height: 100vh;
